--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "devicon": "^2.16.0",
     "motion": "^12.23.0",
     "next": "15.3.5",
